--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* clear all padding, border, margin from all boxes */
 *{
     border:none;
     padding: 0;
@@ -6,7 +7,12 @@
 }
 
 #login-img {
+    float:left;
     height:100vh;
     width: 600px;
     background:url('../images/login_image.webp') center center/ cover no-repeat;
+}
+
+#login-holder{
+    float:right;
 }
