--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
 #login-img div{
     padding-top:50px;
     margin:230px auto 0 auto;
-    width:50%;
+    width:300px;
     height:150px;
     background-color: rgba(0,0,0,0.6);
     color:#fff;
@@ -62,7 +62,7 @@ a {
     margin:100px auto 0 auto;
     text-align: left;
     width:250px;
-    height:240px;
+    height:250px;
     border:3px inset #1b1b1b;
     border-radius: 10px;
     padding-top: 30px;
@@ -79,6 +79,7 @@ a {
     margin-top:5px;
     margin-bottom: 15px;
     width:200px;
+    height:25px;
 }
 
 .login-input:hover{
@@ -113,7 +114,7 @@ a {
     margin: 75px auto 0 auto;
     text-align: left;
     width: 250px;
-    height: 350px;
+    height: 370px;
     border: 3px inset #1b1b1b;
     border-radius: 10px;
     padding-top: 30px;
@@ -135,3 +136,12 @@ a {
 #suscribe-button:hover {
     background-color: #fa7d92;
 }
+
+/* User page*/
+#header-div{
+    display:grid;
+    grid-template-columns: 80% 20%;
+    width:100%;
+    height: 75px;
+}
+
