--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,8 +140,22 @@ a {
 /* User page*/
 #header-div{
     display:grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 70% 30%;
     width:100%;
     height: 75px;
 }
-
+#user-button{
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+    position:relative;
+    right:10px;
+}
+#user-info-div{
+    width:100px;
+    height:100px;
+    position:absolute;
+    display:block;
+    right:100px;
+    background-color: #cec8c883;
+}
