--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,12 +143,14 @@ a {
     grid-template-columns: 70% 30%;
     width:100%;
     height: 75px;
+    position:relative;
 }
 #user-button{
     width:50px;
     height:50px;
-    border-radius: 50%;
-    position:relative;
+    border-radius: 3px;
+    position:absolute;
+    top:10px;
     right:10px;
 }
 #user-info-div{
@@ -156,6 +158,6 @@ a {
     height:100px;
     position:absolute;
     display:block;
-    right:100px;
+    top:10px;
     background-color: #cec8c883;
 }
