--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,17 +148,20 @@ a {
 #user-button{
     width:50px;
     height:50px;
-    border-radius: 3px;
     position:absolute;
     top:10px;
     right:10px;
+   background:url('../images/burger_open.png') center center / cover no-repeat;
 }
 #user-info-div{
-    width:100px;
-    height:100px;
+    width:300px;
+    height:200px;
     position:absolute;
     display:none;
     top:60px;
     right:0;
     background-color: #cec8c883;
+}
+#user-info-div > h3{
+    margin:10px 0 10px 10px;
 }
