--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,26 +142,82 @@ a {
     display:grid;
     grid-template-columns: 70% 30%;
     width:100%;
-    height: 75px;
+    height: 120px;
     position:relative;
 }
 #user-button{
-    width:50px;
-    height:50px;
+    width:30px;
+    height:30px;
     position:absolute;
     top:10px;
     right:10px;
    background:url('../images/burger_open.png') center center / cover no-repeat;
 }
 #user-info-div{
-    width:300px;
+    width:200px;
     height:200px;
     position:absolute;
     display:none;
-    top:60px;
+    top:40px;
     right:0;
-    background-color: #cec8c883;
+    background-color: #1b1b1b;
+    color:#fff;
 }
+#user-info-div>a{
+    color:#fff;
+}
+
 #user-info-div > h3{
     margin:10px 0 10px 10px;
+}
+
+#instructions{
+    width:100%;
+    height:400px;
+    text-align: center;
+}
+
+#instructions>h2{
+    margin:20px auto 20px auto;
+}
+
+#instructions > div{
+    width:100vw;
+    height:300px;
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.instruction-child{
+    flex: 0 0 250px;
+    height:250px;
+    margin: 20px;
+    border: #1b1b1b inset 2px;
+    border-radius: 10px;
+}
+#game-area{
+    text-align: center;
+}
+#game-area>div{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-flow:row;
+    width:100vw;
+    height: 450px;
+}
+#game-area-left{
+    height:400px;
+    flex:0 0 300px;
+    border: #1b1b1b inset 2px;
+    border-radius: 10px;
+    margin: 20px;
+}
+#game-area-right{
+    height: 400px;
+    flex: 0 1 800px;
+    border: #1b1b1b inset 2px;
+    border-radius: 10px;
+    margin:20px;
 }
