--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ a {
     display:grid;
     grid-template-columns: 70% 30%;
     width:100%;
-    height: 120px;
+    height: 80px;
     position:relative;
 }
 #user-button{
@@ -151,7 +151,7 @@ a {
     position:absolute;
     top:10px;
     right:10px;
-   background:url('../images/burger_open.png') center center / cover no-repeat;
+    background:url('../images/burger_open.png') center center / cover no-repeat;
 }
 #user-info-div{
     width:200px;
@@ -162,15 +162,20 @@ a {
     right:0;
     background-color: #1b1b1b;
     color:#fff;
+    z-index: 2;
 }
-#user-info-div>a{
+#user-info-div a{
     color:#fff;
 }
 
 #user-info-div > h3{
-    margin:10px 0 10px 10px;
+    margin:20px 0 20px 20px;
 }
-
+#hero-image{
+    height:100px;
+    width:100%;
+    background: url('../images/hero_image.webp') center center / cover no-repeat;
+}
 #instructions{
     width:100%;
     height:400px;
@@ -182,42 +187,47 @@ a {
 }
 
 #instructions > div{
-    width:100vw;
+    width:95%;
     height:300px;
     display:flex;
     flex-wrap:wrap;
     flex-direction: row;
     justify-content: space-around;
+    margin:0 auto 0 auto;
 }
 .instruction-child{
     flex: 0 0 250px;
     height:250px;
     margin: 20px;
-    border: #1b1b1b inset 2px;
+    border: #1b1b1b inset 3px;
     border-radius: 10px;
 }
 #game-area{
     text-align: center;
+    width: 100%;
+    height: 470px;
 }
 #game-area>div{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex-flow:row;
-    width:100vw;
+    width: 95%;
     height: 450px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0 auto 0 auto;
 }
 #game-area-left{
     height:400px;
     flex:0 0 300px;
-    border: #1b1b1b inset 2px;
+    border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin: 20px;
 }
 #game-area-right{
     height: 400px;
-    flex: 0 1 800px;
+    flex: 0 1 700px;
     border: #1b1b1b inset 2px;
     border-radius: 10px;
     margin:20px;
+    min-width: 300px;
 }
