--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,14 +217,18 @@ a {
     margin: 0 auto 0 auto;
 }
 #game-area-left{
-    height:400px;
+    height:350px;
     flex:0 0 300px;
     border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin: 20px;
 }
+#game-area-left>div{
+    height:50px;
+    width:100%;
+}
 #game-area-right{
-    height: 400px;
+    height: 350px;
     flex: 0 1 700px;
     border: #1b1b1b inset 2px;
     border-radius: 10px;
