--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,7 @@ a {
     border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin: 20px;
+    position:relative;
 }
 #game-area-left>div{
     height:50px;
@@ -234,4 +235,11 @@ a {
     border-radius: 10px;
     margin:20px;
     min-width: 300px;
+}
+.spring-div{
+    position:absolute;
+    top:0;
+    left:0;
+    border-radius: 5px;
+    background-color: green;
 }
