--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,20 +224,21 @@ a {
     margin: 20px;
     position:relative;
 }
-#game-area-left>div{
+#game-buttons-area{
     height:50px;
     width:100%;
 }
 #game-area-right{
     height: 350px;
-    flex: 0 1 700px;
-    border: #1b1b1b inset 2px;
+    flex: 0 2 700px;
+    border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin:20px;
-    min-width: 300px;
 }
 .spring-div{
     position:absolute;
+    width:50px;
+    height:50px;
     top:0;
     left:0;
     border-radius: 5px;
