--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,11 +229,12 @@ a {
     width:100%;
 }
 .game-buttons{
-    width:80px;
+    width:85px;
     height:35px;
-    margin:5px 5px 0 5px;
+    margin:5px 3px 0 3px;
     color:#fff;
     background-color: #1b1b1b;
+    border-radius:5px;
 }
 #game-area-right{
     height: 350px;
@@ -260,3 +261,8 @@ a {
     border-radius: 5px;
     background-color: red;
 }
+
+#holder1,#holder2,#holder3,#holder4,
+#holder5{
+    display:none;
+} 
