--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ a {
 }
 
 #instructions>h2{
-    margin:20px auto 20px auto;
+    margin:60px auto 20px auto;
 }
 
 #instructions > div{
@@ -236,9 +236,16 @@ a {
     background-color: #1b1b1b;
     border-radius:5px;
 }
+#game-area-center {
+    height: 370px;
+    flex: 0 1 400px;
+    border: #1b1b1b inset 3px;
+    border-radius: 10px;
+    margin: 20px;
+}
 #game-area-right{
     height: 370px;
-    flex: 0 2 700px;
+    flex: 0 1 400px;
     border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin:20px;
