format moving divs text and adding canceling function to move after movind div approaches anchor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,9 @@ a {
     left:0;
     border-radius: 5px;
     background-color: green;
+    color:#fff;
+    padding:10px;
+    font-size: 150%;
 }
 .dissipator-div {
     position: absolute;
@@ -267,6 +270,9 @@ a {
     right: 0;
     border-radius: 5px;
     background-color: red;
+    color: #fff;
+    padding: 10px;
+    font-size: 150%;
 }
 
 #holder1,#holder2,#holder3,#holder4,
