add function createDiffEquation and initial code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 /*Body Font family*/
 
 body {
-    font-family: 'Bitter', 'Sans';
+    font-family: Bitter, Georgia, sans-serif;
     font-weight: 600;
 }
 
