--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,6 @@ a {
     margin: 20px 0 20px 20px;
 }
 
-#hero-image {
-    height: 100px;
-    width: 100%;
-    background: url('../images/hero_image.webp') center center / cover no-repeat;
-}
-
 #instructions {
     width: 100%;
     height: 400px;
@@ -283,6 +277,10 @@ a {
     border: #1b1b1b inset 3px;
     border-radius: 10px;
     margin: 20px;
+}
+
+#game-area-center > h3,h4{
+    margin-top:10px;
 }
 
 #game-area-right {
