--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,10 +197,12 @@ a {
     width: 100%;
     height: 400px;
     text-align: center;
+    color:#fff;
 }
 
 #instructions>h2 {
-    margin: 60px auto 20px auto;
+    color:#1b1b1b;
+    margin: 30px auto 20px auto;
 }
 
 #instructions>div {
@@ -343,7 +345,7 @@ th {
 
 
 /* Adding responsiveness for tablets and mobiles */
-@media screen and (max-width:900px) {
+@media screen and (max-width:915px) {
     #outer-login-page {
         grid-template-columns:100%;
         grid-template-rows: 150px 800px;
@@ -351,9 +353,24 @@ th {
         width: 100%;
         height:1000px;
     }
-        #login-img div {
-            margin: 40px auto 0 auto;
-            height:60px;
-            padding:10px;
+    #login-img div {
+        margin: 40px auto 0 auto;
+        height:60px;
+        padding:10px;
+    }
+    #instructions {
+        width: 100%;
+        height: 800px;
+        text-align: center;
+        color: #fff;
+    }
+        #instructions>div {
+            width: 95%;
+            height: 750px;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: space-around;
+            margin: 0 auto 0 auto;
         }
 }
