--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,6 @@ a {
     right: 0;
     background-color: #fff;
     color: #1b1b1b;
-    ;
     z-index: 2;
 }
 
@@ -216,23 +215,40 @@ a {
 }
 
 .instruction-child-black {
-    flex: 0 0 250px;
+    flex: 0 0 300px;
     height: 250px;
     margin: 20px;
     background-color: #a75910;
     border: #1b1b1b inset 3px;
     border-radius: 10px;
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.instruction-child-black > h3{
+    margin:15px auto 15px auto;
+}
+.instruction-child-black>ul,ol {
+    text-align: justify;
+}
+.instruction-child-black li {
+    margin-bottom: 10px;
 }
 
 .instruction-child-blue {
-    flex: 0 0 250px;
+    flex: 0 0 300px;
     height: 250px;
     margin: 20px;
     background-color: #5e5959;
     border: #1b1b1b inset 3px;
     border-radius: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
-
+.instruction-child-blue>h3 {
+    margin: 15px auto 15px auto;
+}
 #game-area {
     text-align: center;
     width: 100%;
@@ -349,7 +365,6 @@ th {
     #outer-login-page {
         grid-template-columns:100%;
         grid-template-rows: 150px 800px;
-        justify-content: space-around;
         width: 100%;
         height:1000px;
     }
