--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 #login-img div {
     padding-top: 50px;
     margin: 230px auto 0 auto;
-    width: 300px;
+    width: 250px;
     height: 150px;
     background-color: rgba(0, 0, 0, 0.6);
     color: #fff;
@@ -362,8 +362,6 @@ th {
 }
 
 
-
-
 /* Adding responsiveness for tablets and mobiles */
 @media screen and (max-width:915px) {
     #outer-login-page {
@@ -377,19 +375,21 @@ th {
         height:60px;
         padding:10px;
     }
-    #instructions {
-        width: 100%;
-        height: 800px;
-        text-align: center;
-        color: #fff;
+    #header-div {
+        height: 120px;
     }
-        #instructions>div {
-            width: 95%;
-            height: 750px;
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            justify-content: space-around;
-            margin: 0 auto 0 auto;
-        }
+    #instructions {
+        height: 800px;
+    }
+    #instructions>div {
+        height: 750px;
+    }
+}
+@media screen and (max-width:715px){
+    #instructions {
+        height: 1000px;
+    }    
+    #instructions>div {
+        height: 950px;
+    }
 }
