--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,11 +197,11 @@ a {
     width: 100%;
     height: 400px;
     text-align: center;
-    color:#fff;
+    color: #fff;
 }
 
 #instructions>h2 {
-    color:#1b1b1b;
+    color: #1b1b1b;
     margin: 30px auto 20px auto;
 }
 
@@ -227,12 +227,15 @@ a {
     padding-right: 25px;
 }
 
-.instruction-child-black > h3{
-    margin:15px auto 15px auto;
+.instruction-child-black>h3 {
+    margin: 15px auto 15px auto;
 }
-.instruction-child-black>ul,ol {
+
+.instruction-child-black>ul,
+ol {
     text-align: justify;
 }
+
 .instruction-child-black li {
     margin-bottom: 10px;
 }
@@ -247,14 +250,17 @@ a {
     padding-left: 25px;
     padding-right: 25px;
 }
+
 .instruction-child-blue>h3 {
     margin: 15px auto 15px auto;
 }
-.instruction-child-blue > p {
+
+.instruction-child-blue>p {
     text-align: justify;
 }
-.mobile-instruction{
-    display:none;
+
+.mobile-instruction {
+    display: none;
 }
 
 #game-area {
@@ -297,33 +303,38 @@ a {
     border-radius: 5px;
 }
 
-.round-button{
-    height:20px;
-    width:20px;
+.round-button {
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     background-color: #5e5959;
+    display: none;
 }
 
-#socket-1{
+#socket-1 {
     position: absolute;
-    top:115px;
-    left:100px;
+    top: 115px;
+    left: 100px;
 }
+
 #socket-2 {
     position: absolute;
     top: 115px;
     left: 177px;
 }
+
 #socket-3 {
     position: absolute;
     top: 215px;
     left: 100px;
 }
+
 #socket-4 {
     position: absolute;
     top: 215px;
     left: 177px;
 }
+
 #game-area-center {
     height: 370px;
     flex: 0 1 400px;
@@ -332,8 +343,9 @@ a {
     margin: 20px;
 }
 
-#game-area-center > h3,h4{
-    margin-top:10px;
+#game-area-center>h3,
+h4 {
+    margin-top: 10px;
 }
 
 #game-area-right {
@@ -396,36 +408,48 @@ th {
 /* Adding responsiveness for tablets and mobiles */
 @media screen and (max-width:915px) {
     #outer-login-page {
-        grid-template-columns:100%;
+        grid-template-columns: 100%;
         grid-template-rows: 150px 800px;
         width: 100%;
-        height:1000px;
+        height: 1000px;
     }
+
     #login-img div {
         margin: 40px auto 0 auto;
-        height:60px;
-        padding:10px;
+        height: 60px;
+        padding: 10px;
     }
+
     #header-div {
         height: 120px;
     }
+
     #instructions {
         height: 800px;
     }
+
     #instructions>div {
         height: 750px;
     }
+
     .mobile-instruction {
         display: inline;
     }
+
     .desktop-instruction {
         display: none;
     }
+
+    .round-button {
+        display: inline-block;
+    }
 }
-@media screen and (max-width:715px){
+
+@media screen and (max-width:715px) {
     #instructions {
         height: 1000px;
-    }    
+    }
+
     #instructions>div {
         height: 950px;
     }
