--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,11 +198,12 @@ a {
     height: 400px;
     text-align: center;
     color: #fff;
+    background-color: #1b1b1b;
+    padding-top: 10px;
 }
 
 #instructions>h2 {
-    color: #1b1b1b;
-    margin: 30px auto 20px auto;
+    margin: 0 auto 20px auto;
 }
 
 #instructions>div {
@@ -267,6 +268,10 @@ ol {
     text-align: center;
     width: 100%;
     height: 470px;
+}
+
+#game-area>h2 {
+    margin: 20px auto 20px auto;
 }
 
 #game-area>div {
