--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ a {
 /* div display by burger button */
 #user-info-div {
     width: 100%;
-    height: 200px;
+    height: 220px;
     position: absolute;
     display: none;
     top: 0;
@@ -190,6 +190,7 @@ a {
     background-color: #fff;
     color: #1b1b1b;
     z-index: 2;
+    padding-top: 30px;
 }
 
 #user-info-div a {
